# Proxy-VST

./: CMakeLists.txt  README.md
src/core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplerProcessor.cpp  SamplerProcessor.h
src/dsp/sampler/: SampleLibrary.cpp  SampleLibrary.h
src/resources/: layout.html  layout.scss  theme.scss
src/ui/: LayoutView.cpp  LayoutView.h
